# Milo-Cut

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_zh.md  app.spec  build.py  dev.bat  dev.py  main.py  pyproject.toml
.claude/: settings.local.json
core/: __init__.py  analysis_service.py  asr_service.py  bridge_service.py  config.py  events.py  export_service.py  export_timeline.py  ffmpeg_presets.py  ffmpeg_service.py  llm_service.py  logging.py  media_server.py  models.py  paths.py  plugin_manager.py  project_service.py  proxy_manager.py  subtitle_service.py  task_manager.py
docs/: PRD-1.1.0.md  Resume.md  audit-plan-0.2.0-1.md  audit-plan-0.2.0-2.md  audit-plan-0.2.0-3.md  audit-plan-0.2.0-4.md  audit-plan-0.2.2.md  audit-plan-1.1.0.md  audit-plan-1.2.0.md  audit-plan-preview-2.md  audit-plan-preview-3.md  audit-report-0.2.0-3.md  audit-report-0.2.0-4.md  audit-report-0.2.2.md  audit-report-1.1.0.md  audit-report-preview-2.md  audit-report-preview-3.md  backend-guide.md  component-spec.md  design-spec.md  frontend-guide.md  record-1.1.0.md  record-preview.md  video-script.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend_dist/: index.html
pywebvue/: app.py
references/: 0-早期竞品调查.md  1-竞品分析.md  2-竞品分析+项目构想.md  3-产品边界+项目选型.md  4-实战验证与用户深度画像.md  issues-preview.md
tests/: TEST_GUIDE.md  conftest.py  test_analysis_service.py  test_asr_gui_e2e.py  test_bridge_service.py  test_config.py  test_e2e_srt.py  test_export_service.py  test_llm_service.py  test_models.py  test_project_service.py  test_subtitle_service.py  (+1 more)
(+91 files in other folders)
