[project]
name = "milo-cut"
version = "0.1.0"
description = "AI-powered video preprocessing tool for oral presentation videos"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=6.0",
    "loguru>=0.7",
    "pydantic>=2.0",
]

[dependency-groups]
dev = ["pyinstaller>=6.19.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pywebvue", "core"]
