[project]
name = "milo-cut"
version = "0.2.1"
description = "AI-powered video preprocessing tool for oral presentation videos"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=6.0",
    "loguru>=0.7",
    "pydantic>=2.0",
    "opentimelineio>=0.18.1",
]

[dependency-groups]
dev = ["pyinstaller>=6.19.0", "pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pywebvue", "core"]
